add `AgentPreset.webhook`
